src/scss/config/html.scss
@mixin scrollbars {
  &::-webkit-scrollbar {
    width: 0.5rem;
    background-color: rgb(234, 143, 205, 0.25);
  }
  &::-webkit-scrollbar-thumb {
    background-color: var(--color-secondary);
  }
}

html {
  @include scrollbars;

  &[data-input-device="keyboard"] {
    pointer-events: none;
    user-select: none;

    * {
      pointer-events: none;
      user-select: none;
    }
  }

  &[data-hide-cursor] {
    cursor: none;

    * {
      user-select: none;
      cursor: none;
    }
  }

  &.state-a11y-big-font {
    font-size: 22px;

    @media (min-width: $mq-large) {
      font-size: 28px;
    }
  }
}

